<resources>
    <string name="app_name">Keep It Fresh</string>
    <string name="new_item_menu_option">New Item</string>
    <string name="sort_by_menu_option">Sort by…</string>
    <string name="settings_menu_option">Settings</string>
    <string name="pref_save_to_default">Save items to default location</string>
    <string name="pref_save_to_default_summ">When an item is created, it will automatically be sent
        to the default location you choose, rather than asking where to put it.</string>
    <string name="pref_choose_default">Choose the default location</string>
    <string name="pref_item_location_default">1</string>
    <string name="pref_move_expired_items_to_cart">Expired items move to shopping list</string>
    <string name="pref_move_expired_items_to_cart_summ">
        Deleting an expired item automatically moves it to the shopping list
    </string>
    <string name="sort_by_name">name</string>
    <string name="sort_by_expire_date">Expiration Date</string>
    <string name="sort_by_purchase_date">Purchase Date</string>
    <string name="sort_menu_text">Sort by...</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="about_page_title">About Keep It Fresh</string>
    <string name="about_page_info_1">Keep It Fresh was written and designed by
        \nAleksandr Kurzon and Nathan Pohl.</string>
    <string name="about_page_info_2">The icon used for the app was designed by Madebyoliver on flaticon.com</string>
    <string name="item_detail_editable_checkbox">Edit</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="purchase_date">Purchase Date:</string>
    <string name="location">Location:</string>
    <string name="quantity">Quantity:</string>
    <string name="location_set">Set Location: </string>
    <string name="quantity_set">Set Quantity: </string>
    <string name="set_expiration_set">Set Expiration Date: </string>
    <string name="purchase_set">Set Purchase Date: </string>
    <string name="save">Save</string>
    <string name="title_hint">Enter a name for the item.</string>
    <string name="shopping_list">Shopping List</string>
    <string name="item_detail_shopping">Send to Shopping List</string>
    <string name="toast_add_to_shopping">Added to Shopping List</string>
    <string name="error_quantity">Quantity must be nonzero</string>
    <string name="error_no_name">Item must have a name</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="expire_date_label">Expires: %1$s</string>
    <string name="purchase_date_label">Purchased: %1$s</string>
    <string name="all">All</string>
    <string name="delete_checked_items">delete checked items</string>
    <string name="acquire_checked_items">acquire checked items</string>
    <string name="new_shopping_list_item_set">new item</string>
    <string name="hint_shopping_list_new_item">name the new item</string>
    <string name="new_shopping_list_item_title">New Item</string>
    <string name="submit">submit</string>
    <string name="edit_item">Edit Item</string>
    <string name="button_delete_item">delete</string>
    <string name="stored">Stored Food</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="pref_choose_notification_threshold">Notification Threshold</string>
    <string name="pref_choose_notification_summ">
        Choose how soon you want to be notified before an item expires</string>
    <string name="expired_items_title">Item(s) about to expire</string>
    <string name="pref_choose_notification_dialog">Number of days before expiration</string>
    <string name="pref_clear_history">Clear History</string>
    <string name="toggle_notifications">Notifications</string>
    <string name="toggle_notifications_summ">Get notified when an item is about to expire</string>
    <string name="confirm_clear_history">Are you sure you want to clear the information stored in this app?</string>
    <string name="ok">OK</string>
    <string name="deleted_snackbar">deleted!</string>
    <string name="undo_button">Undo</string>
    <string name="detail_date_header"><u>Set purchase and expiration dates</u></string>
    <string name="detail_details_header"><u>Set quantity and location</u></string>
</resources>
