<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_page_title"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/about_info_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_page_info_1"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/about_info_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_page_info_2"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"/>


</LinearLayout>