<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_save_to_default"
        android:title="@string/pref_save_to_default"
        android:summary="@string/pref_save_to_default_summ"
        android:defaultValue="true"
        />
    <ListPreference
        android:key="pref_choose_default"
        android:dependency="pref_save_to_default"
        android:title="@string/pref_choose_default"
        android:entries="@array/pref_item_location_entries"
        android:entryValues="@array/pref_item_location_values"
        />

    <!--<CheckBoxPreference-->
        <!--android:key="pref_sync"-->
        <!--android:title="@string/pref_sync"-->
        <!--android:summary="@string/pref_sync_summ"-->
        <!--android:defaultValue="true" />-->
    <!--<ListPreference-->
        <!--android:dependency="pref_sync"-->
        <!--android:key="pref_syncConnectionType"-->
        <!--android:title="@string/pref_syncConnectionType"-->
        <!--android:dialogTitle="@string/pref_syncConnectionType"-->
        <!--android:entries="@array/pref_syncConnectionTypes_entries"-->
        <!--android:entryValues="@array/pref_syncConnectionTypes_values"-->
        <!--android:defaultValue="@string/pref_syncConnectionTypes_default" />-->
</PreferenceScreen>