<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:hint="@string/title_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--maybe get rid of these in favor of just displaying dates and assuming user will
            click to change-->
        <TextView
            android:id="@+id/edit_expiration_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_set"
            android:textStyle="bold"
            android:paddingEnd="16dp"/>

        <TextView
            android:id="@+id/expiration_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--<DatePicker-->
            <!--android:id="@+id/edit_item_expiration_date"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="95dp"/>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--maybe get rid of these in favor of just displaying dates and assuming user will
            click to change-->
        <TextView
            android:id="@+id/edit_purchase_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_set"
            android:textStyle="bold"
            android:paddingEnd="16dp"/>

        <TextView
            android:id="@+id/purchase_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--<DatePicker-->
            <!--android:id="@+id/edit_item_purchase_date"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="95dp"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_quantity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_set"
            android:textStyle="bold"
            android:paddingEnd="16dp"/>

        <EditText
            android:id="@+id/edit_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_location_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_set"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/item_location_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/item_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>